# py_simple_lorem

./: .gitignore  README.md  pyproject.toml  readme_generator.py  setup.py
py_simple_lorem/: __init__.py  py_simple_lorem.py  version.py
