[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "CHANGE ME"
author = "Andrew Spangler"
version = "0.0.0"
description = "A short project description."
maintainter = "Andrew Spangler"
copyright = "Copyright 2022, Andrew Spangler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ['Programming Language :: Python :: 3', 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)', 'Operating System :: OS Independent']
dependencies = []
keywords = []

[project.urls]
"Homepage" = "https://github.com/AndrewSpangler/CHANGE ME/"
"Bug Tracker" = "https://github.com/AndrewSpangler/CHANGE ME//issues"